<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.twx</groupId>
    <artifactId>quantitative-trading</artifactId>
    <version>1.2.1</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <!-- ta4j 核心库，用于技术分析 -->
        <dependency>
            <groupId>org.ta4j</groupId>
            <artifactId>ta4j-core</artifactId>
            <version>0.15</version>
        </dependency>

        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-all</artifactId>
            <version>0.64.8</version> <!-- 建议使用最新版本 -->
        </dependency>

        <!-- 【新增】支持Markdown表格 -->
        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-ext-tables</artifactId>
            <version>0.64.8</version>
        </dependency>

        <!-- 【新增】支持删除线 (~~text~~) -->
        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-ext-gfm-strikethrough</artifactId>
            <version>0.64.8</version>
        </dependency>

        <!-- JFreeChart 核心库 -->
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jfreechart</artifactId>
            <version>1.5.3</version> <!-- 使用一个较新的版本 -->
        </dependency>

        <!-- JFreeChart 与 JavaFX 的桥接库 -->
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jfreechart-fx</artifactId>
            <version>1.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.17.2</version> <!-- 建议使用最新版本 -->
        </dependency>

        <!-- 显式声明 slf4j-api 版本，以解决版本冲突 -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.7</version>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna</artifactId>
            <version>5.14.0</version>
        </dependency>

        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>5.14.0</version>
        </dependency>

        <!-- SLF4J 日志实现 -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.7</version>
        </dependency>

        <!-- JavaFX 控件库 -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17.0.10</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>17.0.10</version> <!-- 使用与您项目匹配的版本 -->
        </dependency>

        <!-- JavaFX FXML 库 -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>17.0.10</version>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>


    </dependencies>

    <build>

        <plugins>
            <!-- Maven 编译器插件，设置 Java 版本 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with "mvn javafx:run" -->
                        <id>default-cli</id>
                        <configuration>
                            <!-- 你的主应用程序类 -->
                            <mainClass>com.twx.platform.ui.MainApp</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- 打包可执行 exe（Windows） -->
            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.7.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <mainClass>com.twx.platform.ui.Main</mainClass>
                            <bundleJre>true</bundleJre>
                            <generateInstaller>false</generateInstaller>
                            <administratorRequired>false</administratorRequired>
                            <platform>windows</platform>
                            <winConfig>
                                <icoFile>src/main/resources/com/twx/platform/ui/windows/icon.ico</icoFile>
                            </winConfig>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

<!--            &lt;!&ndash; 关键：用于创建包含所有依赖的 "fat JAR" 的插件 &ndash;&gt;-->
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-shade-plugin</artifactId>-->
<!--                <version>3.2.4</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <phase>package</phase>-->
<!--                        <goals>-->
<!--                            <goal>shade</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <transformers>-->
<!--                                &lt;!&ndash;-->
<!--                                    这个 Transformer 是关键！-->
<!--                                    它会创建一个特殊的 Manifest 文件，-->
<!--                                    告诉 Java 哪个类是主入口类 (Main-Class)。-->
<!--                                    这样你才能通过 `java -jar your-app.jar` 来运行。-->
<!--                                &ndash;&gt;-->
<!--                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
<!--                                    &lt;!&ndash; ★★★ 注意这里的 mainClass 格式，不再需要模块名 ★★★ &ndash;&gt;-->
<!--                                    <mainClass>com.twx.platform.ui.Main</mainClass>-->
<!--                                </transformer>-->
<!--                            </transformers>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>
    </build>
</project>